--- a/index.html
+++ b/index.html
@@ -8,12 +8,62 @@
 
 <body>
 
-<header></header>
+<header> <!--header-->
+    <a href="">
+        <p>WebStudio</p>
+    </a>
+    <ul>
+        <li><a href="">Студия</a></li>
+        <li><a href="">Портфолио</a></li>
+        <li><a href="">Контакты</a></li>
+    </ul>
+    <ul>
+        <li><a href="">info@devstudio.com</a></li>
+        <li><a href="">+38 096 111 11 11</a></li>
+    </ul>
+</header>
 
 <main>
-    <section></section>
-    <section></section>
-    <section></section>
+
+    <section> <!--Geroy-->
+        <h1>Эффективные решения для вашего бизнеса</h1>
+        <p>
+            <a href="">Заказать услугу</a>
+        </p>
+    </section>
+
+    <section> <!--Особенности-->
+        <h2>Особенности</h2>
+        
+        <ul>
+            <li>
+                <h3>Внимание к деталям</h3>
+                <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+            </li>
+            <li>
+                <h3>Пунктуальность</h3>
+                <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+            </li>
+            <li>
+                <h3>Планирование</h3>
+                <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+            </li>
+            <li>
+                <h3>Современные технологии</h3>
+                <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+            </li>
+        </ul>
+
+    </section>
+
+    <section> <!--Чем мы занимаемся-->
+        <h2>Чем мы занимаемся</h2>
+        <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+    </section>
 </main>
 
 <footer></footer>
