--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
     <section> <!--Чем мы занимаемся-->
         <h2>Чем мы занимаемся</h2>
         <ul>
-            <li><a href=""><img src="/img/box1.png" alt="box1" width="370"></a></li>
-            <li><a href=""><img src="/img/box2.png" alt="box2" width="370"></a></li>
-            <li><a href=""><img src="/img/box3.png" alt="box3" width="370"></a></li>
+            <li><a href=""><img src="img/box1.png" alt="box1" width="370"></a></li>
+            <li><a href=""><img src="img/box2.png" alt="box2" width="370"></a></li>
+            <li><a href=""><img src="img/box3.png" alt="box3" width="370"></a></li>
         </ul>
     </section>
 
@@ -71,22 +71,22 @@
     <h2>Наша команда</h2>
 
     <ul>
-        <img src="/img/img.jpg" alt="Игорь" width="270">
+        <img src="img/img.jpg" alt="Игорь" width="270">
         <h3>Игорь Демьяненко</h3>
         <p>Product Designer</p>
     </ul>
     <ul>
-        <img src="/img/img2.jpg" alt="Ольга" width="270">
+        <img src="img/img2.jpg" alt="Ольга" width="270">
         <h3>Ольга Репина</h3>
         <p>Frontend Developer</p>
     </ul>
     <ul>
-        <img src="/img/img3.jpg" alt="Николай" width="270">
+        <img src="img/img3.jpg" alt="Николай" width="270">
         <h3>Николай Тарасов</h3>
         <p>Marketing</p>
     </ul>
     <ul>
-        <img src="/img/img4.jpg" alt="Михаил" width="270">
+        <img src="img/img4.jpg" alt="Михаил" width="270">
         <h3>Михаил Ермаков</h3>
         <p>UI Designer</p>
     </ul>
