--- a/index.html
+++ b/index.html
@@ -7,12 +7,10 @@
   </head>
 
   <body>
+    <!--header-->
     <header>
-      <!--header-->
-      <a href="">
-        <p>WebStudio</p>
-      </a>
       <nav>
+        <a href="">WebStudio</a>
         <ul>
           <li><a href="">Студия</a></li>
           <li><a href="">Портфолио</a></li>
@@ -26,16 +24,15 @@
     </header>
 
     <main>
+      <!--Geroy-->
       <section>
-        <!--Geroy-->
         <h1>Эффективные решения для вашего бизнеса</h1>
-        <p>
-          <a href="">Заказать услугу</a>
-        </p>
+
+        <a href="">Заказать услугу</a>
       </section>
 
+      <!--Особенности-->
       <section>
-        <!--Особенности-->
         <h2>Особенности</h2>
 
         <ul>
@@ -69,19 +66,18 @@
           </li>
         </ul>
       </section>
-
+      <!--Чем мы занимаемся-->
       <section>
-        <!--Чем мы занимаемся-->
         <h2>Чем мы занимаемся</h2>
         <ul>
           <li>
-            <a href=""><img src="img/box1.png" alt="box1" width="370" /></a>
+            <a href=""><img src="img/box1.jpg" alt="box1" width="370" /></a>
           </li>
           <li>
-            <a href=""><img src="img/box2.png" alt="box2" width="370" /></a>
+            <a href=""><img src="img/box2.jpg" alt="box2" width="370" /></a>
           </li>
           <li>
-            <a href=""><img src="img/box3.png" alt="box3" width="370" /></a>
+            <a href=""><img src="img/box3.jpg" alt="box3" width="370" /></a>
           </li>
         </ul>
       </section>
@@ -92,7 +88,7 @@
 
         <ul>
           <li>
-            <img src="img/img.jpg" alt="Игорь" width="270" />
+            <img src="img/img1.jpg" alt="Игорь" width="270" />
             <h3>Игорь Демьяненко</h3>
             <p>Product Designer</p>
           </li>
@@ -120,7 +116,7 @@
 
     <!-- footer -->
     <footer>
-      <h3>WebStudio</h3>
+      <a href="">WebStudio</a>
 
       <address>г. Киев, пр-т Леси Украинки, 26</address>
 
